fixed services alignment

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ nav {
 
 #services {
     padding-top: 69px;
+    padding-bottom: 69px;
 }
 
 .services-banner {
